--- a/SDKAngularSample/package.json
+++ b/SDKAngularSample/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-server": "^8.0.0",
     "@angular/router": "^8.0.0",
     "core-js": "^3.1.3",
+    "diff": "^3.5.0",
     "moment": "^2.24.0",
     "rainbow-web-sdk": "^1.40.0",
     "rxjs": "^6.5.2",
